remove outer margins, combine layout-grid and section-wrapper into one block page #7

--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -1,13 +1,4 @@
-include ../common.blocks/header/header
-include ../common.blocks/block-header/block-header
-include ../common.blocks/profile/profile
-include ../common.blocks/contact/contact
-include ../common.blocks/skills/skills
-include ../common.blocks/education/education
-include ../common.blocks/experience/experience
-include ../common.blocks/software/software
-
-- const wideWrapperClasses = ["section-wrapper", "section-wrapper_width_wide"];
+include ../common.blocks/page/page
 
 doctype html
 html
@@ -17,157 +8,4 @@ html
     meta(name="description" content="Adaptive resume template")
     title Resume
   body
-    .layout-grid
-      section(class=["section-wrapper", "section-wrapper_type_for-header"])
-        +header
-
-      section.section-wrapper.section-wrapper_type_for-profile
-        +block-header({
-          iconName: "profile-icon.png",
-          blockName: "profile"
-        })
-        .section-wrapper__content.section-wrapper__content_type_for-profile
-          +profile
-
-      section.section-wrapper.section-wrapper_type_for-contact
-        .section-wrapper__header.section-wrapper__header_type_for-contact
-          +block-header({
-            iconName: "contact-icon.png",
-            blockName: "contact"
-          })
-
-        -
-          const contactsItems = [
-            {
-              type: "address",
-              data: "Main Street, City."
-            },
-            {
-              type: "e-mail",
-              data: "contact@domain.com",
-              attr: "mailto"
-            },
-            {
-              type: "phone",
-              data: "555-555-555",
-              attr: "tel"
-            },
-            {
-              type: "website",
-              data: "www.yourweb.com",
-              attr: "site"
-            }
-          ];
-
-        +contact(contactsItems)
-
-      section(class=["section-wrapper", "section-wrapper_type_for-skills"])
-        +block-header({
-          iconName: "skills-icon.png",
-          blockName: "skills"
-        })
-        -
-          const skillsItems = [
-            {
-              name: "creative",
-              level: "9"
-            },
-            {
-              name: "teamwork",
-              level: "11"
-            },
-            {
-              name: "innovate",
-              level: "6"
-            },
-            {
-              name: "communication",
-              level: "11"
-            }
-          ];
-
-        .section-wrapper__content.section-wrapper__content_type_for-skills
-          +skills(skillsItems)
-
-      section(class=wideWrapperClasses, class=["section-wrapper_type_for-education"])
-        +block-header({
-          iconName: "education-icon.png",
-          blockName: "education"
-        })
-        -
-          var educationDescription = "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. " +
-          "Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis " +
-          "dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque."
-
-          var educationItem = {
-            name: "master degree",
-            period: "Feb 2011 - Jun 2014",
-            title: "university name",
-            description: educationDescription,
-            nameColor: "blue"
-          }
-
-        .section-wrapper__content.section-wrapper__content_type_for-education
-          +education([
-            educationItem,
-            educationItem,
-            educationItem,
-            educationItem
-          ])
-
-      section(class=wideWrapperClasses class=["section-wrapper_type_for-experience"])
-        +block-header({
-          iconName: "experience-icon.png",
-          blockName: "experience"
-        })
-        -
-          var experienceItem = {
-            name: "company name",
-            period: "Feb 2011 - Jun 2014",
-            title: "your job here",
-            description: educationDescription,
-            nameColor: "black"
-          }
-
-        .section-wrapper__content.section-wrapper__content_type_for-experience
-          +experience([
-            experienceItem,
-            experienceItem,
-            experienceItem
-          ])
-
-      section(class=wideWrapperClasses class=["section-wrapper_type_for-software"])
-        +block-header({
-          iconName: "software-icon.png",
-          blockName: "software"
-        })
-        -
-          var softwareItems = [
-            {
-              tool: "photoshop",
-              possession: 505/554*100
-            },
-            {
-              tool: "illustrator",
-              possession: 391/554*100
-            },
-            {
-              tool: "indesign",
-              possession: 312/554*100
-            },
-            {
-              tool: "dreamweaver",
-              possession: 461/554*100
-            },
-            {
-              tool: "after effects",
-              possession: 342/554*100
-            },
-            {
-              tool: "html&css3",
-              possession: 505/554*100
-            }
-          ];
-
-        .section-wrapper__content.section-wrapper__content_type_for-software
-          +software(softwareItems)
+    +page
