--- a/src/common.blocks/education/education.pug
+++ b/src/common.blocks/education/education.pug
@@ -3,4 +3,4 @@ include ../progress-list/progress-list
 mixin education(items)
   .education
     .education__list
-      +progress-list(items)
+      +progress-list(items, 'education')
