--- a/src/common.blocks/experience/experience.scss
+++ b/src/common.blocks/experience/experience.scss
@@ -5,8 +5,8 @@
 
   &__list {
     @media screen and (max-width: 722px) {
-      margin-top: 1px;
-      margin-left: 5px;
+      margin-top: 0.071rem;
+      margin-left: 0.357rem;
     }
   }
 }
