--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,17 +1,16 @@
+@import './colors';
+
 html {
+  max-width: 1920px;
   font-family: 'Myriad Pro', 'Arial', sans-serif;
   font-weight: normal;
   font-style: normal;
-  font-size: calc(9.791px + 0.5vw);
-  color: #000000;
+  font-size: calc(10px + 0.5vw);
+  color: $black;
 
   @media screen and (max-width: 1094px) {
-    font-size: 8.5px + 0.005*1094px;
+    font-size: 14px;
   }
-}
-
-body {
-  max-width: 1920px;
 }
 
 
