--- a/src/common.blocks/contact/contact.scss
+++ b/src/common.blocks/contact/contact.scss
@@ -3,8 +3,8 @@
 .contact {
   &__table {
     display: table;
-    margin-top: 12px;
-    line-height: 1em;
+    margin-top: 0.708rem;
+    line-height: 1rem;
 
     @media screen and (max-width: 400px) {
       display: flex;
