--- a/src/common.blocks/page/page.scss
+++ b/src/common.blocks/page/page.scss
@@ -4,10 +4,10 @@
   justify-content: flex-start;
   flex-wrap: wrap;
   align-content: space-between;
-  padding-left: 3.5em;
-  padding-right: 3.309em;
-  padding-top: 4.5em;
-  max-height: 4000px*0.55;
+  padding-left: 3.5rem;
+  padding-right: 3.309rem;
+  padding-top: 4.4rem;
+  max-height: 236rem*0.55;
 
   @media screen and (max-width: 400px) {
     padding-left: 8vw;
@@ -20,7 +20,7 @@
 
   &__section {
     width: 36.5%;
-    margin-bottom: 49.5px;
+    margin-bottom: 2.9205rem;
 
     @media screen and (max-width: 722px) {
       width: 100%;
@@ -29,7 +29,7 @@
     &_width {
       &_wide {
         width: 56%;
-        margin-right: 2px;
+        margin-right: 0.25rem;
 
         @media screen and (max-width: 722px) {
           width: 100%;
@@ -40,71 +40,76 @@
 
     &_type {
       &_for-header {
-        margin-bottom: 150px*0.55;
-        margin-left: 6px;
+        margin-top: 0.1rem;
+        margin-bottom: 4.88rem;
+        margin-left: 0.354rem;
       }
 
       &_for-profile {
-        margin-left: 4px;
+        margin-left: 0.236rem;
       }
 
       &_for-contact {
-        margin-left: 3px;
-        margin-bottom: 38.5px;
+        width: 36.9%;
+        margin-bottom: 2.2715rem;
       }
 
       &_for-skills {
-        margin-left: 3px;
+        margin-left: 0.177rem;
       }
 
       &_for-header, &_for-profile, &_for-contact, &_for-skills {
         @media screen and (max-width: 722px) {
-          margin-left: 0px;
+          margin-left: 0;
         }
       }
 
       &_for-education, &_for-experience {
-        margin-bottom: 31.5px;
+        margin-bottom: 1.8585rem;
+      }
+
+      &_for-software {
+
       }
     }
   }
 
   &__section-header {
     &_type_for-contact {
-      margin-left: 2px;
+      margin-left: 0.118rem;
 
       @media screen and (max-width: 722px) {
-        margin-left: 0px;
+        margin-left: 0;
       }
     }
   }
 
   &__section-content {
     &_type {
+      &_for-profile {
+        margin-top: 0.8rem;
+        margin-left: 0;
+      }
+
       &_for-education {
         width: 100%;
-        margin-left: 15px;
+        margin-left: 0.885rem;
       }
 
       &_for-experience {
-        margin-left: 15px;
-        margin-top: 42px;
+        margin-left: 0.885rem;
+        margin-top: 2.65rem;
         width: 100%;
       }
 
-      &_for-profile {
-        margin-top: 12.7px;
-        margin-left: 0.35px;
-      }
-
       &_for-skills {
-        margin-top: 29*0.774px;
+        margin-top: 1.45rem;
       }
 
       &_for-software {
-        margin-top: 26px;
-        margin-left: 5.5px;
-        margin-right: 0.5px;
+        margin-top: 1.6rem;
+        margin-left: 0.3245rem;
+        margin-right: 0.0295rem;
         width: 100%;
       }
     }
