--- a/src/common.blocks/progress-list-item/progress-list-item.scss
+++ b/src/common.blocks/progress-list-item/progress-list-item.scss
@@ -7,20 +7,24 @@
   &:before {
     content: '';
     background-color: $black;
-    width: 1.324em;
-    height: 1.324em;
+    width: 1.324rem;
+    height: 1.324rem;
     display: inline-block;
     border-radius: 50%;
     position: absolute;
-    left: -44px;
-    top: 5px;
+    left: -2.596rem;
+    top: 0.295rem;
+  }
+
+  &__header {
+
   }
 
   &__name {
     font-weight: bold;
     font-size: 1.66rem;
     text-transform: uppercase;
-    margin-right: 15px;
+    margin-right: 0.86rem;
 
     &_color {
       &_blue {
@@ -36,24 +40,22 @@
   &__period {
     font-size: 1.7rem;
     display: inline-block;
+    letter-spacing: -0.015rem;
   }
 
   &__title {
     font-size: 1.66rem;
     text-transform: uppercase;
-    line-height: 1.45;
+    line-height: 1.4;
   }
 
   &__description {
     font-size: 1rem;
     display: inline-block;
-    margin-top: 2.5px;
-    margin-left: 2px;
-    margin-bottom: 12px;
-    line-height: 1.255;
-
-    &:nth-child(3) {
-      margin-bottom: 11px;
-    }
+    margin-top: 0.168rem;
+    margin-left: 0.118rem;
+    margin-bottom: 0.5rem;
+    line-height: 1.2;
+    letter-spacing: -0.004rem;
   }
 }
