change single quotes to double #16

--- a/src/common.blocks/experience/experience.pug
+++ b/src/common.blocks/experience/experience.pug
@@ -3,4 +3,4 @@ include ../progress-list/progress-list
 mixin experience(items)
   .experience
     .experience__list
-      +progress-list(items, 'experience')
+      +progress-list(items, "experience")
