--- a/src/common.blocks/software/software.pug
+++ b/src/common.blocks/software/software.pug
@@ -5,7 +5,7 @@ mixin software(items)
     - var childNumbers = []
 
     if items.length === 6
-      - childNumbers = ['first', 'second', 'third', 'fourth', 'fifth', 'sixth']
+      - childNumbers = ["first", "second", "third", "fourth", "fifth", "sixth"]
 
     each item, index in items
       +software-item(item, childNumbers[index])
