--- a/src/common.blocks/contact/contact.scss
+++ b/src/common.blocks/contact/contact.scss
@@ -6,13 +6,7 @@
     margin-top: 0.708rem;
     line-height: 1rem;
 
-    @media screen and (max-width: 400px) {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    @media screen and (max-width: 1094px) and (min-width: 723px) {
+    @media screen and (max-width: 400px), screen and (max-width: 1094px) and (min-width: 723px) {
       display: flex;
       flex-direction: column;
       align-items: center;
