delete unused modificators

--- a/src/common.blocks/page/page.pug
+++ b/src/common.blocks/page/page.pug
@@ -129,7 +129,7 @@ mixin page
           experienceItem
         ])
 
-    section(class=[pageSectionWide, "page__section_type_for-software"])
+    section(class=pageSectionWide)
       +block-header({
         iconName: "software-icon.png",
         blockName: "software"
