--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -6,6 +6,7 @@ html
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(name="description" content="Adaptive resume template")
+    link(rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5")
     title Resume
   body
     +page
