--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -12,6 +12,7 @@ html {
   font-style: normal;
   font-size: calc(10px + 0.5vw);
   color: $black;
+  background-color: $resume-background;
 
   @media screen and (max-width: 1094px) {
     font-size: 14px;
