remove incorrect modificators #16

--- a/src/common.blocks/software/software.pug
+++ b/src/common.blocks/software/software.pug
@@ -2,10 +2,5 @@ include ../software-item/software-item
 
 mixin software(items)
   .software
-    - var childNumbers = []
-
-    if items.length === 6
-      - childNumbers = ["first", "second", "third", "fourth", "fifth", "sixth"]
-
-    each item, index in items
-      +software-item(item, childNumbers[index])
+    each item in items
+      +software-item(item)
