remove useless quotes #16

--- a/src/common.blocks/page/page.pug
+++ b/src/common.blocks/page/page.pug
@@ -63,19 +63,19 @@ mixin page
         const skillsItems = [
           {
             name: "creative",
-            level: "9"
+            level: 9
           },
           {
             name: "teamwork",
-            level: "11"
+            level: 11
           },
           {
             name: "innovate",
-            level: "6"
+            level: 6
           },
           {
             name: "communication",
-            level: "11"
+            level: 11
           }
         ];
 
