add trailing semocolons to js code in pug files #16

--- a/src/common.blocks/page/page.pug
+++ b/src/common.blocks/page/page.pug
@@ -90,7 +90,7 @@ mixin page
       -
         var educationDescription = "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. " +
         "Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis " +
-        "dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque."
+        "dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.";
 
         var educationItem = {
           name: "master degree",
@@ -98,7 +98,7 @@ mixin page
           title: "university name",
           description: educationDescription,
           nameColor: "blue"
-        }
+        };
 
       .page__section-content.page__section-content_type_for-education
         +education([
@@ -120,7 +120,7 @@ mixin page
           title: "your job here",
           description: educationDescription,
           nameColor: "black"
-        }
+        };
 
       .page__section-content.page__section-content_type_for-experience
         +experience([
