--- a/src/common.blocks/contact/contact.pug
+++ b/src/common.blocks/contact/contact.pug
@@ -2,6 +2,6 @@ include ../contact-item/contact-item
 
 mixin contact(items)
   .contact
-    table.contact__table
+    .contact__table
       each item in items
         +contact-item(item)
