--- a/src/common.blocks/skills-item/skills-item.pug
+++ b/src/common.blocks/skills-item/skills-item.pug
@@ -9,6 +9,5 @@ mixin skills-item({ name, level, maxLevel = 12 })
         - level -= 1;
 
       while notChecked > 0
-        div.skills-item__point
+        .skills-item__point
         - notChecked -= 1;
-
