--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -4,17 +4,17 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    meta(name="description" content="Adaptive resume template")
-    link(rel="apple-touch-icon" sizes="144x144" href="assets/favicons/apple-touch-icon.png")
-    link(rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png")
-    link(rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png")
-    link(rel="manifest" href="assets/favicons/site.webmanifest")
-    link(rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#107693")
-    link(rel="shortcut icon" href="assets/favicons/favicon.ico")
-    meta(name="msapplication-TileColor" content="#da532c")
-    meta(name="msapplication-config" content="assets/favicons/browserconfig.xml")
-    meta(name="theme-color" content="#ffffff")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="description", content="Adaptive resume template")
+    link(rel="apple-touch-icon", sizes="144x144", href="assets/favicons/apple-touch-icon.png")
+    link(rel="icon", type="image/png", sizes="32x32", href="assets/favicons/favicon-32x32.png")
+    link(rel="icon", type="image/png", sizes="16x16", href="assets/favicons/favicon-16x16.png")
+    link(rel="manifest", href="assets/favicons/site.webmanifest")
+    link(rel="mask-icon", href="assets/favicons/safari-pinned-tab.svg", color="#107693")
+    link(rel="shortcut icon", href="assets/favicons/favicon.ico")
+    meta(name="msapplication-TileColor", content="#da532c")
+    meta(name="msapplication-config", content="assets/favicons/browserconfig.xml")
+    meta(name="theme-color", content="#ffffff")
     title Resume
   body
     +page
