--- a/src/common.blocks/software-item/software-item.pug
+++ b/src/common.blocks/software-item/software-item.pug
@@ -1,5 +1,5 @@
-mixin software-item({ tool, possession }, childNumber)
+mixin software-item({ tool, possession })
   .software-item
     .software-item__tool= tool
     .software-item__scale
-      .software-item__level(style={width: `${+possession}%`})
+      .software-item__level(style={width: `${possession}%`})
