adjust pp for 1920px #26

--- a/src/common.blocks/page/page.pug
+++ b/src/common.blocks/page/page.pug
@@ -14,7 +14,7 @@ mixin page
     section.page__section.page__section_type_for-header
       +header
 
-    section.page__section.page__section_type_for-profile
+    section.page__section
       +block-header({
         iconName: "profile-icon.png",
         blockName: "profile"
