--- a/src/common.blocks/profile/profile.scss
+++ b/src/common.blocks/profile/profile.scss
@@ -3,5 +3,6 @@
 .profile {
   color: $black;
   font-size: 0.985rem;
-  letter-spacing: 0.0015rem;
+  letter-spacing: -0.01rem;
+  line-height: 1.17769;
 }
