--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -17,6 +17,10 @@ html {
   @media screen and (max-width: 1094px) {
     font-size: 14px;
   }
+
+  @media screen and (min-width: 1680px) {
+    font-size: 25px;
+  }
 }
 
 
