--- a/src/common.blocks/contact-item/contact-item.scss
+++ b/src/common.blocks/contact-item/contact-item.scss
@@ -13,9 +13,8 @@
     color: $black;
     display: table-cell;
     font-size: 1.34rem;
-    letter-spacing: -0.01rem;
-    padding-left: 0.8rem;
-    padding-top: 0.531rem;
+    letter-spacing: -0.03rem;
+    padding-left: 0.75rem;
 
     @media screen and (max-width: 400px), screen and (max-width: 1094px) and (min-width: 723px) {
       display: block;
@@ -28,8 +27,8 @@
     display: table-cell;
     font-size: 1.3rem;
     font-weight: bold;
-    letter-spacing: 0.008rem;
-    padding: 1.45rem 1.7rem 1.038rem 0;
+    letter-spacing: -0.03rem;
+    padding: 1.55rem 1.7rem 0.9rem 0.1rem;
     text-transform: uppercase;
 
     @media screen and (max-width: 400px), screen and (max-width: 1094px) and (min-width: 723px) {
